--- a/Changelog Component/index.html
+++ b/Changelog Component/index.html
@@ -6,6 +6,10 @@
     <title>Changelog Component</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Changelog</h1>
+        <p class="heading">Here is everything we have shipped for the past few days</p>
+    </header>
+
 </body>
 </html>
