--- a/Changelog Component/index.html
+++ b/Changelog Component/index.html
@@ -10,6 +10,43 @@
         <h1>Changelog</h1>
         <p class="heading">Here is everything we have shipped for the past few days</p>
     </header>
+    <main>
+        <div>
+            <p>September 3, 2024</p>
+            <div></div>
+            <p></p>
+        </div>
+        <div>
+            <p>August 28, 2024 </p>
+            <div></div>
+            <p></p>
+        </div>
+        <div>
+            <p>August 28, 2024</p>
+            <div></div>
+            <p></p>
+        </div>
+        <div>
+            <p>August 25, 2024</p>
+            <div></div>
+            <p></p>
+        </div>
+        <div>
+            <p>August 15, 2024</p>
+            <div></div>
+            <p></p>
+        </div>
+        <div>
+            <p>August 10, 2024</p>
+            <div></div>
+            <p></p>
+        </div>
+        <div>
+            <p>August 1, 2024</p>
+            <div></div>
+            <p></p>
+        </div>
+    </main>
 
 </body>
 </html>
