--- a/Changelog Component/index.html
+++ b/Changelog Component/index.html
@@ -14,37 +14,37 @@
         <div>
             <p>September 3, 2024</p>
             <div></div>
-            <p></p>
+            <p>Anouncing Projects on Frontend Roadmaps</p>
         </div>
         <div>
             <p>August 28, 2024 </p>
             <div></div>
-            <p></p>
+            <p>Build learning habits with learning streaks</p>
         </div>
         <div>
             <p>August 28, 2024</p>
             <div></div>
-            <p></p>
+            <p>Git and GitHub Roadmap</p>
         </div>
         <div>
             <p>August 25, 2024</p>
             <div></div>
-            <p></p>
+            <p>Submit your project solutions and get feedback</p>
         </div>
         <div>
             <p>August 15, 2024</p>
             <div></div>
-            <p></p>
+            <p>Backend Projects Ideas</p>
         </div>
         <div>
             <p>August 10, 2024</p>
             <div></div>
-            <p></p>
+            <p>Redis roadmap</p>
         </div>
         <div>
             <p>August 1, 2024</p>
             <div></div>
-            <p></p>
+            <p>Changelog page to help you stay in the loop</p>
         </div>
     </main>
 
