--- a/Changelog Component/index.html
+++ b/Changelog Component/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Changelog Component</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -13,39 +14,40 @@
     <main>
         <div>
             <p>September 3, 2024</p>
-            <div></div>
+            <div>.</div>
             <p>Anouncing Projects on Frontend Roadmaps</p>
         </div>
         <div>
             <p>August 28, 2024 </p>
-            <div></div>
+            <div>.</div>
             <p>Build learning habits with learning streaks</p>
         </div>
         <div>
             <p>August 28, 2024</p>
-            <div></div>
+            <div>.</div>
             <p>Git and GitHub Roadmap</p>
         </div>
         <div>
             <p>August 25, 2024</p>
-            <div></div>
+            <div>.</div>
             <p>Submit your project solutions and get feedback</p>
         </div>
         <div>
             <p>August 15, 2024</p>
-            <div></div>
+            <div>.</div>
             <p>Backend Projects Ideas</p>
         </div>
         <div>
             <p>August 10, 2024</p>
-            <div></div>
+            <div>.</div>
             <p>Redis roadmap</p>
         </div>
         <div>
             <p>August 1, 2024</p>
-            <div></div>
+            <div>.</div>
             <p>Changelog page to help you stay in the loop</p>
         </div>
+        <div class="button">Visit Complete Changelog</div>
     </main>
 
 </body>
