--- a/Changelog Component/index.html
+++ b/Changelog Component/index.html
@@ -13,39 +13,39 @@
     </header>
     <main>
         <div>
-            <p class="first_para">eptember 3, 2024</p>
+            <p class="first">September 3, 2024</p>
             <div class="dot"></div>
-            <p>Anouncing Projects on Frontend Roadmaps</p>
+            <p class="second">Anouncing Projects on Frontend Roadmaps</p>
         </div>
         <div>
-            <p class="first_para">August 28, 2024</p>
+            <p class="first">August 28, 2024</p>
             <div class="dot"></div>
-            <p>Build learning habits with learning streaks</p>
+            <p class="second">Build learning habits with learning streaks</p>
         </div>
         <div>
-            <p class="first_para">August 28, 2024</p>
+            <p class="first">August 28, 2024</p>
             <div class="dot"></div>
-            <p>Git and GitHub Roadmap</p>
+            <p class="second">Git and GitHub Roadmap</p>
         </div>
         <div>
-            <p class="first_para">August 25, 2024</p>
+            <p class="first">August 25, 2024</p>
             <div class="dot"></div>
-            <p>Submit your project solutions and get feedback</p>
+            <p class="second">Submit your project solutions and get feedback</p>
         </div>
         <div>
-            <p class="first_para">August 15, 2024</p>
+            <p class="first">August 15, 2024</p>
             <div class="dot"></div>
-            <p>Backend Projects Ideas</p>
+            <p class="second">Backend Projects Ideas</p>
         </div>
         <div>
-            <p class="first_para">August 10, 2024</p>
+            <p class="first">August 10, 2024</p>
             <div class="dot"></div>
-            <p>Redis roadmap</p>
+            <p class="second">Redis roadmap</p>
         </div>
         <div>
-            <p class="first_para">August 1, 2024</p>
+            <p class="first">August 1, 2024</p>
             <div class="dot"></div>
-            <p>Changelog page to help you stay in the loop</p>
+            <p class="second">Changelog page to help you stay in the loop</p>
         </div>
         <div class="button">Visit Complete Changelog</div>
     </main>
