--- a/Changelog Component/index.html
+++ b/Changelog Component/index.html
@@ -9,9 +9,9 @@
 <body>
     <header>
         <h1>Changelog</h1>
-        <p class="heading">Here is everything we have shipped for the past few days</p>
+        <p>Here is everything we have shipped for the past few days</p>
     </header>
-    <main>
+    <main class="changelog-container">
         <div>
             <p class="first">September 3, 2024</p>
             <div class="dot"></div>
@@ -47,8 +47,11 @@
             <div class="dot"></div>
             <p class="second">Changelog page to help you stay in the loop</p>
         </div>
-        <div class="button">Visit Complete Changelog</div>
     </main>
+
+    <footer>
+        <div class="button">Visit Complete Changelog</div>
+    </footer>
 
 </body>
 </html>
