--- a/Changelog Component/index.html
+++ b/Changelog Component/index.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <div class="button">Visit Complete Changelog</div>
+        <div class="button"><a href="https://github.com/Polqt/roadmap.sh/tree/main/Frontend%20Projects/Changelog%20Component" target="_blank" rel="noopener">Visit Complete Changelog</a></div>
     </footer>
 
 </body>
