starting a new project

--- a/Coffee Website/main.html
+++ b/Coffee Website/main.html
@@ -51,6 +51,27 @@
                 </div>
             </div>
         </section>
+
+        <section class="about-section">
+
+            <div class="content">
+                <div class="img">
+                    <img src="/images/about-image.jpg" alt="about-pic">
+                </div>
+
+                <div class="text">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque totam sapiente quae ducimus beatae dignissimos earum mollitia blanditiis, libero voluptatibus. Soluta reprehenderit autem animi quasi similique cumque dolorem tempora commodi?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia nam iusto, necessitatibus soluta ipsam quae ex in eius numquam, aliquid ipsa rem repudiandae asperiores sed accusamus dignissimos quam consectetur tempora!
+                    </p>
+                    <div class="sci-btn">
+                        <a href="#">F</a>
+                        <a href="#">I</a>
+                        <a href="#">X</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
