--- a/Login Form/register.html
+++ b/Login Form/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A Simple LOgin Form</title>
+    <title>Register Form</title>
     <link rel="stylesheet" href="/Login Form/main.css" />
   </head>
   <body>
@@ -32,7 +32,7 @@
 
         <!-- <div class="forgot-password"><a href="#">Forgot Password?</a></div> -->
         <div class="forgot-password">
-          Already with an account? <a href="#">Login</a>
+          Already with an account? <a href="/Login Form/index.html">Login</a>
         </div>
       </form>
     </div>
